refactor: enhance documentation and improve structure in various components